<resources>
    <string name="app_name">Order Food</string>
    <string name="recommend">Recommend</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
    <string name="history">History</string>
    <string name="pizza">Pizza</string>
    <string name="rice">Rice</string>
    <string name="chicken">Chicken</string>
    <string name="sushi">Sushi</string>
    <string name="drink">Drink</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name :</string>
    <string name="price">Price :</string>
    <string name="forget_password">Forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="please_enter_your_account">Please enter your account</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_login_with">Or login with</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="do_you_want_add_this_food_in_your_cart">Do you want add this food in your cart ?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total">Total</string>
    <string name="message_optional">Message (optional)</string>
    <string name="pay_method">Pay Method (*)</string>
    <string name="address">Address (*)</string>
    <string name="phone_number">Phone number (*)</string>
    <string name="full_name">Full name (*)</string>
    <string name="noodle">Noodle</string>
    <string name="search">Search</string>
    <string name="order">Order :</string>
    <string name="time">Time :</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="write_message">Write message</string>
    <string name="my_page">My Page</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password (*)</string>
    <string name="new_password">New Password (*)</string>
    <string name="change">Change</string>
    <string name="error_fullname">Please enter your full name</string>
    <string name="error_phone">Invalid phone number</string>
    <string name="error_address">Please enter your address</string>
    <string name="quantity">Quantity</string>

    <string-array name="pay_method_array">
        <item>Cash</item>
        <item>Credit Card</item>
    </string-array>
</resources>