<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/nav_home"
    android:title="@string/home"
    android:icon="@drawable/ic_home"
    tools:ignore="HardcodedText" />
    <item android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        tools:ignore="HardcodedText" />
    <item android:id="@+id/nav_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"
        tools:ignore="HardcodedText" />

    <item android:id="@+id/nav_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history"
        tools:ignore="HardcodedText" />
    <item android:id="@+id/nav_contact"
        android:title="@string/my_page"
        android:icon="@drawable/ic_person"
        tools:ignore="HardcodedText" />

</menu>