<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:alpha="0.6"
        android:background="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="28dp"
            android:layout_gravity="center"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="32sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_account"
                android:alpha="0.7"
                android:textSize="18sp"
                android:textStyle=""/>


            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:alpha="0.7"
                android:text="@string/email_address"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"
                />
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:alpha="0.7"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_remove_password"
                />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:layout_weight="1"
                    android:buttonTint="@color/orange"
                    android:id="@+id/checkbox"
                    android:textSize="18sp"
                    android:text="@string/remember_me"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:alpha="0.7"
                    android:id="@+id/txtForgetPassword"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/orange"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                     />

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10sp"
                android:background="@drawable/custom_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:id="@+id/btnLogin"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10sp"
                android:background="@drawable/custom_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:id="@+id/btnRegister"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginTop="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:alpha="0.7"
                android:layout_gravity="center"
                android:text="Or login with "/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30sp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgGoogle"
                    android:layout_width="40sp"
                    android:layout_margin="10sp"
                    android:scaleType="center"
                    android:src="@drawable/google"
                    android:layout_height="40sp"/>
                <ImageView
                    android:id="@+id/imgFacebook"
                    android:layout_width="40sp"
                    android:layout_margin="10sp"
                    android:scaleType="center"
                    android:src="@drawable/facebook"
                    android:layout_height="40sp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="@color/yellow"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:layout_height="wrap_content"/>


</RelativeLayout>